force-app/main/default/objects/Test1234__c/Test1234__c.object-meta.xml
<CustomObject>
    <label>Test1234</label>
    <nameField>
        <label>Test1234 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test1234</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>