force-app/main/default/objects/Test1234__c/fields/Field_1__c.field-meta.xml
<CustomField>
    <fullName>Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field 1</label>
    <type>Checkbox</type>
</CustomField>